# clippy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml
src/: autostart.rs  client.rs  clipboard.rs  discovery.rs  lib.rs  main.rs  main_headless.rs  protocol.rs  server.rs  tray.rs
tests/: integration.rs
