[package]
name = "clippy"
version = "0.1.0"
edition = "2021"
description = "Bidirectional clipboard sync over WebSocket"

[[bin]]
name = "clippy"
path = "src/main.rs"

[[bin]]
name = "clippy-headless"
path = "src/main_headless.rs"

[dependencies]
arboard = "3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
anyhow = "1"
tray-icon = "0.19"
tao = "0.33"
local-ip-address = "0.6"
image = "0.25"
base64 = "0.22"
